--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/iamdeveloper120/backend.git"
+    "url": "https://github.com/ItsHMS/Kenna-ai-backend.git"
   },
   "keywords": [
     "netlify",
